--- a/Copy_of_Trabajo_Práctico_Algoritmos(V2)-2.ipynb
+++ b/Copy_of_Trabajo_Práctico_Algoritmos(V2)-2.ipynb
@@ -20,8 +20,8 @@
       "source": [
         "# Algoritmos de optimización - Trabajo Práctico<br>\n",
         "Nombre y Apellidos: Jenny Sofía Guerrero Burbbano  <br>\n",
-        "Url: https://github.com/.../03MAIR---Algoritmos-de-Optimizacion---/tree/master/TrabajoPractico<br>\n",
-        "Google Colab: https://colab.research.google.com/drive/xxxxxxxxxxxxxxxx <br>\n",
+        "Url: https://github.com/jsofii/03MAIR---Algoritmos-de-Optimizacion-SofiaGuerrero",
+        "Google Colab: https://colab.research.google.com/drive/1fUsg4_dMnrfwJJD638oUqONF6CY9eGbE?usp=sharing",
         "Problema:\n",
         " Configuración de Tribunales\n",
         "\n",
